--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -1,1 +1,55 @@
-echo "Listar comandos"
+#colores
+#ejemplo: echo -e "${verde} La opcion (-e) es para que pille el color.${borra_colores}"
+
+rojo="\e[0;31m\033[1m" #rojo
+verde="\e[;32m\033[1m"
+azul="\e[0;34m\033[1m"
+amarillo="\e[0;33m\033[1m"
+rosa="\e[0;35m\033[1m"
+turquesa="\e[0;36m\033[1m"
+borra_colores="\033[0m\e[0m" #borra colores
+
+
+#comprueba la conexion a internet
+if ping -c1 google.com &>/dev/null
+then
+    #actualizar el script
+    archivo_local="alias_bashrc.config" # Nombre del archivo local
+    ruta_repositorio="https://github.com/sukigsx/alias_bashrc.git" #ruta del repositorio para actualizar y clonar con git clone
+
+    # Obtener la ruta del script
+    descarga=$(dirname "$(readlink -f "$0")")
+    git clone $ruta_repositorio /tmp/comprobar >/dev/null 2>&1
+
+    diff $descarga/$archivo_local /tmp/comprobar/$archivo_local >/dev/null 2>&1
+
+
+    if [ $? = 0 ]
+    then
+        #esta actualizado, solo lo comprueba
+        #echo ""
+        #echo -e "${verde} El script${borra_colores} $0 ${verde}esta actualizado.${borra_colores}"
+        #echo ""
+        chmod -R +w /tmp/comprobar
+        rm -R /tmp/comprobar
+        actualizado="SI"
+    else
+        #hay que actualizar, comprueba y actualiza
+        #echo ""
+        #echo -e "${amarillo} EL script${borra_colores} $0 ${amarillo}NO esta actualizado.${borra_colores}"
+        #echo -e "${verde} Se procede a su actualizacion automatica.${borra_colores}"
+        #sleep 3
+        mv /tmp/comprobar/$archivo_local $descarga
+        chmod -R +w /tmp/comprobar
+        rm -R /tmp/comprobar
+        #echo ""
+        #echo -e "${amarillo} El script se ha actualizado, es necesario cargarlo de nuevo.${borra_colores}"
+        #echo -e ""
+        #exit
+    fi
+else
+    conexion="NO"
+fi
+
+
+echo " si tio si"
