--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -11,10 +11,9 @@ rosa="\e[0;35m\033[1m"
 turquesa="\e[0;36m\033[1m"
 borra_colores="\033[0m\e[0m" #borra colores
 
-#opciones_alias(){
+opciones_alias(){
 echo "popo"
 echo "pipi"
-
 }
 
 
@@ -68,3 +67,5 @@ else
     exit
 fi
 }
+
+echo " Comando ( opciones_alias ), para ver las opciones de alias_bash."
