--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -14,6 +14,7 @@ borra_colores="\033[0m\e[0m" #borra colores
 opciones_alias(){
 echo "popo"
 echo "pipi"
+echo "actualizar_alias"
 }
 
 
@@ -32,7 +33,7 @@ fi
 }
 
 #actualizar el script
-actualizar_script(){
+actualizar_alias(){
 archivo_local="alias_bashrc.config" # Nombre del archivo local
 ruta_repositorio="https://github.com/sukigsx/alias_bashrc.git" #ruta del repositorio para actualizar y clonar con git clone
 
