--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -13,7 +13,7 @@ borra_colores="\033[0m\e[0m" #borra colores
 
 opciones_alias(){
 echo "popo"
-echo "pipi"
+echo "pipiiiiiiiiiiiiii"
 echo "actualizar_alias"
 }
 
