--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -69,4 +69,4 @@ else
 fi
 }
 
-echo " Comando ( opciones_alias ), para ver las opciones de alias_bash."
+echo " Comando ( opciones_alias ), para ver las opciones de alias_bash.aaaaaaaaaaaaaa"
