--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -38,7 +38,7 @@ archivo_local="alias_bashrc.config" # Nombre del archivo local
 ruta_repositorio="https://github.com/sukigsx/alias_bashrc.git" #ruta del repositorio para actualizar y clonar con git clone
 
 # Obtener la ruta del script
-descarga='/home/$(whoami)/.config/alias_bashrc'
+descarga="/home/$(whoami)/.config/alias_bashrc"
 git clone $ruta_repositorio /tmp/comprobar >/dev/null 2>&1
 
 diff $descarga/$archivo_local /tmp/comprobar/$archivo_local >/dev/null 2>&1
@@ -65,6 +65,7 @@ else
     echo ""
     echo -e "${amarillo} El script se ha actualizado, es necesario cargarlo de nuevo.${borra_colores}"
     echo -e ""
+    read p
     exit
 fi
 }
