--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -70,4 +70,4 @@ else
 fi
 }
 
-echo " Comando ( opciones_alias ), para ver las opciones de alias_bash.aaaaaaaaaaaaaa"
+echo " Comando ( opciones_alias ), para ver las opciones de alias_bash."
