--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -65,6 +65,7 @@ else
     echo ""
     echo -e "${amarillo} El script se ha actualizado, es necesario cargarlo de nuevo.${borra_colores}"
     echo -e ""
+    break
     read p
     exit
 fi
