--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -12,7 +12,7 @@ turquesa="\e[0;36m\033[1m"
 borra_colores="\033[0m\e[0m" #borra colores
 
 opciones_alias(){
-echo "popo"
+echo "popooooooooooooooooo"
 echo "pipiiiiiiiiiiiiii"
 echo "actualizar_alias"
 }
