--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -34,6 +34,21 @@ fi
 
 #actualizar el script
 actualizar_alias(){
+
+if ping -c1 google.com &>/dev/null
+then
+    conexion="SI"
+    echo ""
+    echo -e " Conexion a internet = ${verde}SI${borra_colores}"
+else
+    conexion="NO"
+    echo ""
+    echo -e " Conexion a internet = ${rojo}NO${borra_colores}"
+    echo ""
+    echo -e "${rojo} No se puede comprobar la actualizacion sin conexion a internet.${borra_colores}"
+fi
+
+
 archivo_local="alias_bashrc.config" # Nombre del archivo local
 ruta_repositorio="https://github.com/sukigsx/alias_bashrc.git" #ruta del repositorio para actualizar y clonar con git clone
 
@@ -65,9 +80,6 @@ else
     echo ""
     echo -e "${amarillo} El script se ha actualizado, es necesario cargarlo de nuevo.${borra_colores}"
     echo -e ""
-    break
-    read p
-    exit
 fi
 }
 
