--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -11,10 +11,19 @@ rosa="\e[0;35m\033[1m"
 turquesa="\e[0;36m\033[1m"
 borra_colores="\033[0m\e[0m" #borra colores
 
+#esto es lo que muestra al cargar laterminal
+echo -e " Opciones de alias_bashrc ( comando = opciones_alias )."
+
+
+
 opciones_alias(){
-echo "popooooooooooooooooo"
-echo "pipiiiiiiiiiiiiii"
-echo "actualizar_alias"
+echo " actualizar_alias_bashrc"
+echo " desistalar_alias_bashrc"
+echo " alias_nuevo"
+echo " borrar_alias"
+echo " backup_alias"
+echo " restore_alias"
+echo " editar_fichero_alias"
 }
 
 #actualizar el script
@@ -49,7 +58,7 @@ if [ $? = 0 ]
 then
     #esta actualizado, solo lo comprueba
     echo ""
-    echo -e "${verde} El script${borra_colores} $0 ${verde}esta actualizado.${borra_colores}"
+    echo -e " Actualizado = ${verde}SI${borra_colores}"
     echo ""
     chmod -R +w /tmp/comprobar
     rm -R /tmp/comprobar
@@ -69,4 +78,4 @@ else
 fi
 }
 
-echo " Comando ( opciones_alias ), para ver las opciones de alias_bash."
+
