--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -17,6 +17,9 @@ echo -e " Opciones de alias_bashrc ( comando = opciones_alias )."
 
 
 opciones_alias(){
+echo ""
+echo " - Opciones de alias_bashrc -"
+echo ""
 echo " actualizar_alias_bashrc"
 echo " desistalar_alias_bashrc"
 echo " alias_nuevo"
