--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -26,7 +26,8 @@ echo " alias_nuevo"
 echo " borrar_alias"
 echo " backup_alias"
 echo " restore_alias"
-echo " editar_fichero_alias"
+echo -e "${azul} editar_fichero_alias${borra_colores}"
+echo ""
 }
 
 #actualizar el script
@@ -76,8 +77,10 @@ else
     chmod -R +w /tmp/comprobar
     rm -R /tmp/comprobar
     echo ""
-    echo -e "${amarillo} El script se ha actualizado, es necesario cargarlo de nuevo.${borra_colores}"
+    echo -e "${amarillo} El script se ha actualizado, es necesario reiniciar la terminal.${borra_colores}"
     echo -e ""
+    read -p " Pulsa una tecla para continuar." p
+    exit
 fi
 }
 
