--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -18,14 +18,14 @@ echo -e " Opciones de alias_bashrc ( comando = opciones_alias )."
 
 opciones_alias(){
 echo ""
-echo " - Opciones de alias_bashrc -"
+echo " ${verde}-${borra_colores} Opciones de alias_bashrc ${verde}-${borra_colores}"
 echo ""
-echo " actualizar_alias_bashrc"
-echo " desistalar_alias_bashrc"
-echo " alias_nuevo"
-echo " borrar_alias"
-echo " backup_alias"
-echo " restore_alias"
+echo -e "${azul} actualizar_alias_bashrc${borra_colores}"
+echo -e "${azul} desistalar_alias_bashrc${borra_colores}"
+echo -e "${azul} alias_nuevo${borra_colores}"
+echo -e "${azul} borrar_alias${borra_colores}"
+echo -e "${azul} backup_alias${borra_colores}"
+echo -e "${azul} restore_alias${borra_colores}"
 echo -e "${azul} editar_fichero_alias${borra_colores}"
 echo ""
 }
