--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -18,7 +18,7 @@ echo -e " Opciones de alias_bashrc ( comando = opciones_alias )."
 
 opciones_alias(){
 echo ""
-echo " ${verde}-${borra_colores} Opciones de alias_bashrc ${verde}-${borra_colores}"
+echo -e " ${verde}-${borra_colores} Opciones de alias_bashrc ${verde}-${borra_colores}"
 echo ""
 echo -e "${azul} actualizar_alias_bashrc${borra_colores}"
 echo -e "${azul} desistalar_alias_bashrc${borra_colores}"
