--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -85,3 +85,36 @@ fi
 }
 
 
+#actualizar el script
+desistalar_alias_bashrc(){
+clear
+echo ""
+echo "${azul} - DESISTALACION -${borra_colores}"
+echo ""
+read -p " ¿ Desistalar alias_bashrc incluidos los alias creados (s/n)? " sn
+while :
+do
+case $sn in
+        s/S)    #si
+                ;;
+
+        n/N)    #no
+                echo ""
+                echo -e "${verde} Perfecto, no se desistala nada.${borra_colores}"
+                echo ""
+                echo -e " ${amarillo}PRESIONA ENTER PARA CONTINUAR ........${borra_colores}";
+                echo "";
+                exit
+                ;;
+
+        *)      echo "";
+                echo -e " ${amarillo}Respuesta imbalida ( s/n ) ${borra_colores}";
+                echo -e " ${amarillo}PRESIONA ENTER PARA CONTINUAR ........${borra_colores}";
+                echo "";
+                read pause;;
+
+esac
+done
+
+}
+
