--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -87,12 +87,12 @@ fi
 
 #actualizar el script
 desistalar_alias_bashrc(){
+while :
 clear
 echo ""
-echo "${azul} - DESISTALACION -${borra_colores}"
+echo -e "${azul} - DESISTALACION -${borra_colores}"
 echo ""
 read -p " ¿ Desistalar alias_bashrc incluidos los alias creados (s/n)? " sn
-while :
 do
 case $sn in
         s/S)    #si
