--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -90,7 +90,7 @@ desistalar_alias_bashrc(){
 while :
 clear
 echo ""
-echo -e "${azul} - DESISTALACION -${borra_colores}"
+echo -e "${verde} - DESISTALACION -${borra_colores}"
 echo ""
 read -p " ¿ Desistalar alias_bashrc incluidos los alias creados (s/n)? " sn
 do
