--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -103,7 +103,8 @@ case $sn in
                 echo -e "${verde} Perfecto, no se desistala nada.${borra_colores}"
                 echo ""
                 echo -e " ${amarillo}PRESIONA ENTER PARA CONTINUAR ........${borra_colores}";
-                echo "";
+                echo ""
+                break
                 ;;
 
         *)      echo "";
