--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -96,13 +96,15 @@ read -p " ¿ Desistalar alias_bashrc incluidos los alias creados (s/n)? " sn
 do
 case $sn in
         s|S)    #si
+                #borra la carga source del .actualizar_alias_bashrc
+                sed -i '/source \/home\/$(whoami)\/.config\/alias_bashrc\/alias_bashrc.config/d' /home/$(whoami)/.bashrc
+                rm -r /home/$(whoami)/.config/alias_bashrc
+                rm /home/$(whoami)/.bashrc_aliases >/dev/null 2>&1
                 ;;
 
         n|N)    #no
                 echo ""
                 echo -e "${verde} Perfecto, no se desistala nada.${borra_colores}"
-                echo ""
-                echo -e " ${amarillo}PRESIONA ENTER PARA CONTINUAR ........${borra_colores}";
                 echo ""
                 break
                 ;;
