--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -105,6 +105,7 @@ case $sn in
                 echo -e " Fichero de configuracion alias_bashrc.congig borrado = ${verde}SI${borra_colores}"
                 echo -e " Alias de tu usuario $(whoami) borradas = ${verde}SI${borra_colores}"
                 echo ""
+                read p
                 ;;
 
         n|N)    #no
