--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -101,7 +101,7 @@ case $sn in
                 rm -r /home/$(whoami)/.config/alias_bashrc
                 rm /home/$(whoami)/.bashrc_aliases >/dev/null 2>&1
                 echo -e ""
-                echo -e " Entrada source del .bashrc borrada = ${verde} SI $(borra_colores)"
+                echo -e " Entrada source del .bashrc borrada = ${verde} SI ${borra_colores}"
                 echo -e " Fichero de configuracion alias_bashrc.congig borrado = ${verde}SI${borra_colores}"
                 echo -e " Alias de tu usuario $(whoami) borradas = ${verde}SI${borra_colores}"
                 echo ""
