--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -105,7 +105,14 @@ case $sn in
                 echo -e " Fichero de configuracion alias_bashrc.congig borrado = ${verde}SI${borra_colores}"
                 echo -e " Alias de tu usuario $(whoami) borradas = ${verde}SI${borra_colores}"
                 echo ""
-                read p
+                echo -e "${verde} Desistalacion completada.${borra_colores}"
+                echo -e "${amarillo} Es necesario reiniciar el terminal.${borra_colores}"
+                echo ""
+                read -p " Pulsa una tecla o ctrl+c para salir."
+                wmctrl -r :ACTIVE: -b remove,maximized_vert,maximized_horz >/dev/null 2>&1
+                xdotool windowkill `xdotool getactivewindow` >/dev/null 2>&1
+                echo ""
+                exit
                 ;;
 
         n|N)    #no
