--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -20,7 +20,7 @@ opciones_alias(){
 echo ""
 echo -e " ${verde}-${borra_colores} Opciones de alias_bashrc ${verde}-${borra_colores}"
 echo ""
-echo -e "${azul} actualizar_alias_bashrc${borra_colores}"
+echo -e "${azul} actualizar_alias_bashrcppppppppppp${borra_colores}"
 echo -e "${azul} desistalar_alias_bashrc${borra_colores}"
 echo -e "${azul} alias_nuevo${borra_colores}"
 echo -e "${azul} borrar_alias${borra_colores}"
