--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -22,7 +22,7 @@ echo -e " ${verde}-${borra_colores} Opciones de alias_bashrc ${verde}-${borra_co
 echo ""
 echo -e "${azul} actualizar_alias_bashrc${borra_colores}"
 echo -e "${azul} desistalar_alias_bashrc${borra_colores}"
-echo -e "${azul} alias_nuevo${borra_colores}"
+echo -e "${azul} crear_alias${borra_colores}"
 echo -e "${azul} borrar_alias${borra_colores}"
 echo -e "${azul} backup_alias${borra_colores}"
 echo -e "${azul} restore_alias${borra_colores}"
@@ -99,7 +99,7 @@ case $sn in
                 #borra la carga source del .actualizar_alias_bashrc
                 sed -i '/source \/home\/$(whoami)\/.config\/alias_bashrc\/alias_bashrc.config/d' /home/$(whoami)/.bashrc
                 rm -r /home/$(whoami)/.config/alias_bashrc
-                rm /home/$(whoami)/.bashrc_aliases >/dev/null 2>&1
+                rm /home/$(whoami)/.bash_aliases >/dev/null 2>&1
                 echo -e ""
                 echo -e " Entrada source del .bashrc borrada = ${verde} SI ${borra_colores}"
                 echo -e " Fichero de configuracion alias_bashrc.congig borrado = ${verde}SI${borra_colores}"
@@ -132,4 +132,34 @@ esac
 done
 
 }
+
+#crear_alias
+crear_alias(){
+# Pedir al usuario el alias y el comando
+read -p "Nombre del alias: " alias_name
+read -p "Comando para el alias $alias_name: " command
+
+# Añadir el alias al archivo .bash_aliases
+echo "alias $alias_name='$command'" >> /home/$(whoami)/.bash_aliases
+
+echo -e "Alias creado ('$alias_name'='$command')."
+echo ""
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
