--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -142,7 +142,7 @@ read -p "Comando para el alias $alias_name: " command
 # Añadir el alias al archivo .bash_aliases
 echo "alias $alias_name='$command'" >> /home/$(whoami)/.bash_aliases
 
-echo -e "Alias creado ('$alias_name'='$command')."
+echo -e " Alias creado (${verde}$alias_name=$command${borra_colores})."
 echo ""
 }
 
