--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -136,12 +136,13 @@ done
 #crear_alias
 crear_alias(){
 # Pedir al usuario el alias y el comando
-read -p "Nombre del alias: " alias_name
-read -p "Comando para el alias $alias_name: " command
+echo ""
+read -p " Nombre del alias: " alias_name
+read -p " Comando para el alias $alias_name: " command
 
 # Añadir el alias al archivo .bash_aliases
 echo "alias $alias_name='$command'" >> /home/$(whoami)/.bash_aliases
-
+echo ""
 echo -e " Alias creado (${verde}$alias_name=$command${borra_colores})."
 echo ""
 }
