--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -147,7 +147,27 @@ echo -e " Alias creado (${verde}$alias_name=$command${borra_colores})."
 echo ""
 }
 
+#borrar_alias
+borrar_alias(){
+#!/bin/bash
 
+# Mostrar los aliases disponibles en .bash_aliases
+echo " Alias disponibles de $(whoami):"
+grep -oP "alias\s+\K\w+(?=\=)" ~/.bash_aliases
+
+# Pedir al usuario los aliases que desea eliminar, separados por espacio
+read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
+
+# Dividir los aliases ingresados por el usuario en un array
+aliases_array=($aliases_to_remove)
+
+# Eliminar cada alias del archivo .bash_aliases
+for alias_name in "${aliases_array[@]}"; do
+    sed -i "/alias $alias_name=/d" ~/.bash_aliases
+    echo "Alias '$alias_name' eliminado correctamente."
+done
+echo ""
+}
 
 
 
