--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -141,7 +141,7 @@ read -p " Nombre del alias: " alias_name
 read -p " Comando para el alias $alias_name: " command
 
 # Añadir el alias al archivo .bash_aliases
-echo "alias $alias_name='$command'" >> /home/$(whoami)/.bash_aliases
+echo "alias $alias_name=$command" >> /home/$(whoami)/.bash_aliases
 echo ""
 echo -e " Alias creado (${verde}$alias_name=$command${borra_colores})."
 echo ""
@@ -152,9 +152,11 @@ borrar_alias(){
 #!/bin/bash
 
 # Mostrar los aliases disponibles en .bash_aliases
+echo ""
 echo " Alias disponibles de $(whoami):"
-grep -oP "alias\s+\K\w+(?=\=)" ~/.bash_aliases
-
+echo ""
+grep -oP "alias\s+\K\w+(?=\=).*'[^']+'" ~/.bash_aliases
+echo ""
 # Pedir al usuario los aliases que desea eliminar, separados por espacio
 read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
 
