--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -155,7 +155,7 @@ borrar_alias(){
 echo ""
 echo " Alias disponibles de $(whoami):"
 echo ""
-grep -oP "alias\s+\K\w+(?=\=).*'[^']+'" ~/.bash_aliases
+grep -oP "alias\s+\K\w+(?=\=)" /home/$(whoami)/.bash_aliases
 echo ""
 # Pedir al usuario los aliases que desea eliminar, separados por espacio
 read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
