--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -149,26 +149,32 @@ echo ""
 
 #borrar_alias
 borrar_alias(){
-#!/bin/bash
+# Verificar si el archivo .bash_aliases existe y no está vacío
+if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
+    echo ""
+    echo " No hay aliases para mostrar."
+    echo ""
+else
+    # Mostrar los aliases disponibles en .bash_aliases
+    echo ""
+    echo " Alias disponibles de $(whoami):"
+    echo ""
+    grep -oP "alias\s+\K\w+(?=\=)" /home/$(whoami)/.bash_aliases
+    echo ""
 
-# Mostrar los aliases disponibles en .bash_aliases
-echo ""
-echo " Alias disponibles de $(whoami):"
-echo ""
-grep -oP "alias\s+\K\w+(?=\=)" /home/$(whoami)/.bash_aliases
-echo ""
-# Pedir al usuario los aliases que desea eliminar, separados por espacio
-read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
+    # Pedir al usuario los aliases que desea eliminar, separados por espacio
+    read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
 
-# Dividir los aliases ingresados por el usuario en un array
-aliases_array=($aliases_to_remove)
+    # Dividir los aliases ingresados por el usuario en un array
+    aliases_array=($aliases_to_remove)
 
-# Eliminar cada alias del archivo .bash_aliases
-for alias_name in "${aliases_array[@]}"; do
-    sed -i "/alias $alias_name=/d" ~/.bash_aliases
-    echo "Alias '$alias_name' eliminado correctamente."
-done
-echo ""
+    # Eliminar cada alias del archivo .bash_aliases
+    for alias_name in "${aliases_array[@]}"; do
+        sed -i "/alias $alias_name=/d" ~/.bash_aliases
+        echo "Alias '$alias_name' eliminado correctamente."
+    done
+fi
+
 }
 
 
