--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -152,12 +152,12 @@ borrar_alias(){
 # Verificar si el archivo .bash_aliases existe y no está vacío
 if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
-    echo " No hay aliases para mostrar."
+    echo -e "${amarillo} No hay aliases para mostrar.${borra_colores}"
     echo ""
 else
     # Mostrar los aliases disponibles en .bash_aliases
     echo ""
-    echo " Alias disponibles de $(whoami):"
+    echo -e " Alias disponibles de ${verde}$(whoami)${borra_colores}:"
     echo ""
     grep -oP "alias\s+\K\w+(?=\=)" /home/$(whoami)/.bash_aliases
     echo ""
@@ -171,7 +171,7 @@ else
     # Eliminar cada alias del archivo .bash_aliases
     for alias_name in "${aliases_array[@]}"; do
         sed -i "/alias $alias_name=/d" ~/.bash_aliases
-        echo "Alias '$alias_name' eliminado correctamente."
+        echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
     done
 fi
 
