--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -32,7 +32,8 @@ echo ""
 
 #actualizar el script
 actualizar_alias(){
-
+clear
+echo ""
 #comprueba conexion
 if ping -c1 google.com &>/dev/null
 then
@@ -135,6 +136,7 @@ done
 
 #crear_alias
 crear_alias(){
+clear
 # Pedir al usuario el alias y el comando
 echo ""
 read -p " Nombre del alias: " alias_name
@@ -149,6 +151,7 @@ echo ""
 
 #borrar_alias
 borrar_alias(){
+clear
 # Verificar si el archivo .bash_aliases existe y no está vacío
 if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
@@ -164,7 +167,7 @@ else
 
     # Pedir al usuario los aliases que desea eliminar, separados por espacio
     read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
-
+    echo ""
     # Dividir los aliases ingresados por el usuario en un array
     aliases_array=($aliases_to_remove)
 
@@ -174,7 +177,7 @@ else
         echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
     done
 fi
-
+echo ""
 }
 
 
