--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -24,9 +24,9 @@ echo -e "${azul} actualizar_alias_bashrc${borra_colores}"
 echo -e "${azul} desistalar_alias_bashrc${borra_colores}"
 echo -e "${azul} crear_alias${borra_colores}"
 echo -e "${azul} borrar_alias${borra_colores}"
+echo -e "${azul} editar_fichero_alias${borra_colores}"
 echo -e "${azul} backup_alias${borra_colores}"
 echo -e "${azul} restore_alias${borra_colores}"
-echo -e "${azul} editar_fichero_alias${borra_colores}"
 echo ""
 }
 
@@ -154,7 +154,7 @@ clear
 # Verificar si el archivo .bash_aliases existe y no está vacío
 if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
-    echo -e "${amarillo} No hay aliases para mostrar.${borra_colores}"
+    echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
     echo ""
 else
     # Mostrar los aliases disponibles en .bash_aliases
@@ -172,14 +172,25 @@ else
 
     # Eliminar cada alias del archivo .bash_aliases
     for alias_name in "${aliases_array[@]}"; do
-        sed -i "/alias $alias_name=/d" ~/.bash_aliases
+        sed -i "/alias $alias_name=/d" /home/$(whoami)/.bash_aliases
         echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
     done
 fi
 echo ""
 }
 
-
+#editar_fichero_alias
+editar_fichero_alias(){
+clear
+if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
+    echo ""
+    echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
+    echo ""
+else
+    nano /home/$(whoami).bash_aliases
+fi
+echo ""
+}
 
 
 
