--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -187,7 +187,7 @@ if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliase
     echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
     echo ""
 else
-    nano /home/$(whoami).bash_aliases
+    nano /home/$(whoami)/.bash_aliases
 fi
 echo ""
 }
