--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -206,12 +206,29 @@ else
     mkdir /home/$(whoami)/backup_alias
     cp /home/$(whoami)/.bash_aliases /home/$(whoami)/backup_alias/alias_$(whoami).backup
     echo ""
-    echo -e "${verde} Backup creado con exito.$(borra_colores)"
+    echo -e "${verde} Backup creado con exito.${borra_colores}"
 fi
 echo ""
 }
 
-
+#restore_alias
+restore_alias(){
+clear
+if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
+    echo ""
+    echo -e "${amarillo} No hay alias para realizar el backup.${borra_colores}"
+    echo ""
+else
+    echo ""
+    echo -e " Se guardara una copia de tus alias en:"
+    echo -e " /home/$(whoami)/backup_alias"
+    mkdir /home/$(whoami)/backup_alias
+    cp /home/$(whoami)/.bash_aliases /home/$(whoami)/backup_alias/alias_$(whoami).backup
+    echo ""
+    echo -e "${verde} Backup creado con exito.${borra_colores}"
+fi
+echo ""
+}
 
 
 
