--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -203,8 +203,8 @@ else
     echo ""
     echo -e " Se guardara una copia de tus alias en:"
     echo -e " /home/$(whoami)/backup_alias"
-    mkdir /home/$(whoami)/backup_alias
-    cp /home/$(whoami)/.bash_aliases /home/$(whoami)/backup_alias/alias_$(whoami).backup
+    mkdir /home/$(whoami)/backup_alias >/dev/null 2>&1
+    cp /home/$(whoami)/.bash_aliases /home/$(whoami)/backup_alias/alias_$(whoami).backup >/dev/null 2>&1
     echo ""
     echo -e "${verde} Backup creado con exito.${borra_colores}"
 fi
@@ -214,18 +214,20 @@ echo ""
 #restore_alias
 restore_alias(){
 clear
-if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
+if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
     echo ""
-    echo -e "${amarillo} No hay alias para realizar el backup.${borra_colores}"
+    echo -e "${rojo} No hay existe fichero de backup.${borra_colores}"
+    echo -e "${amariollo} El fichero de backup tiene que estar en:${borra_colores}"
+    echo -e "${amarillo} /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup.${borra_colores}"
+    echo -e "${amarillo} Para poder restaurarlo.${borra_colores}"
     echo ""
 else
     echo ""
-    echo -e " Se guardara una copia de tus alias en:"
+    echo -e " Se restaura el backup de alias:"
     echo -e " /home/$(whoami)/backup_alias"
-    mkdir /home/$(whoami)/backup_alias
-    cp /home/$(whoami)/.bash_aliases /home/$(whoami)/backup_alias/alias_$(whoami).backup
+    cp /home/$(whoami)/backup_alias/alias_$(whoami).backup /home/$(whoami)/.bash_aliases >/dev/null 2>&1
     echo ""
-    echo -e "${verde} Backup creado con exito.${borra_colores}"
+    echo -e "${verde} Reastauracion con exito.${borra_colores}"
 fi
 echo ""
 }
