--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -12,9 +12,7 @@ turquesa="\e[0;36m\033[1m"
 borra_colores="\033[0m\e[0m" #borra colores
 
 #esto es lo que muestra al cargar laterminal
-echo -e " Opciones de alias_bashrc ( comando = opciones_alias )."
-
-
+echo "Comando ( opciones_alias ), Para gestionar tus alias."
 
 opciones_alias(){
 echo ""
@@ -22,6 +20,7 @@ echo -e " ${verde}-${borra_colores} Opciones de alias_bashrc ${verde}-${borra_co
 echo ""
 echo -e "${azul} actualizar_alias_bashrc${borra_colores}"
 echo -e "${azul} desistalar_alias_bashrc${borra_colores}"
+echo -e "${azul} listar_alias${borra_colores}"
 echo -e "${azul} crear_alias${borra_colores}"
 echo -e "${azul} borrar_alias${borra_colores}"
 echo -e "${azul} editar_fichero_alias${borra_colores}"
@@ -133,9 +132,35 @@ done
 
 }
 
+#listar_alias
+listar_alias(){
+clear
+echo ""
+echo -e "${verde} - LISTAR ALIAS -${borra_colores}"
+# Verificar si el archivo .bash_aliases existe y no está vacío
+if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
+    echo ""
+    echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
+    echo ""
+    read -p " Pulsa una tecla para cotinuar." p
+else
+    # Mostrar los aliases disponibles en .bash_aliases
+    echo -e "${verde} Listado de alias de $(whoami)."
+    echo -e ""
+    cat /home/$(whoami)/.bash_aliases
+    echo ""
+    read -p " Pulsa una tecla para cotinuar." p
+fi
+echo ""
+
+}
+
+
 #crear_alias
 crear_alias(){
 clear
+echo ""
+echo -e "${verde} - CREAR ALIAS -${borra_colores}"
 # Pedir al usuario el alias y el comando
 echo ""
 read -p " Nombre del alias: " alias_name
@@ -151,6 +176,8 @@ echo ""
 #borrar_alias
 borrar_alias(){
 clear
+echo ""
+echo -e "${verde} - BORRAR ALIAS -${borra_colores}"
 # Verificar si el archivo .bash_aliases existe y no está vacío
 if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
@@ -182,6 +209,8 @@ echo ""
 #editar_fichero_alias
 editar_fichero_alias(){
 clear
+echo ""
+echo -e "${verde} - EDITAR FICHERO ALIAS -${borra_colores}"
 if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
     echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
@@ -195,6 +224,8 @@ echo ""
 #backup_alias
 backup_alias(){
 clear
+echo ""
+echo -e "${verde} - BACKUP ALIAS -${borra_colores}"
 if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
     echo -e "${amarillo} No hay alias para realizar el backup.${borra_colores}"
@@ -214,6 +245,8 @@ echo ""
 #restore_alias
 restore_alias(){
 clear
+echo ""
+echo -e "${verde} - RESTORE ALIAS -${borra_colores}"
 if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
     echo ""
     echo -e "${rojo} No hay existe fichero de backup.${borra_colores}"
@@ -231,13 +264,4 @@ else
 fi
 echo ""
 }
-
-
-
-
-
-
-
-
-
 
