--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -145,6 +145,7 @@ if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliase
     read -p " Pulsa una tecla para cotinuar." p
 else
     # Mostrar los aliases disponibles en .bash_aliases
+    echo ""
     echo -e " Listado de alias de $(whoami)."
     echo -e ""
     cat /home/$(whoami)/.bash_aliases
