--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -147,9 +147,9 @@ else
     # Mostrar los aliases disponibles en .bash_aliases
     echo ""
     echo -e " Listado de alias de $(whoami)."
-    echo -e ""
+    echo -e "${azul}"
     cat /home/$(whoami)/.bash_aliases
-    echo ""
+    echo -e "${borra_colores}"
     read -p " Pulsa una tecla para cotinuar." p
 fi
 echo ""
