--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -24,6 +24,7 @@ echo -e "${azul} listar_alias${borra_colores}"
 echo -e "${azul} crear_alias${borra_colores}"
 echo -e "${azul} borrar_alias${borra_colores}"
 echo -e "${azul} editar_fichero_alias${borra_colores}"
+echo -e "${azul} menu_alias${borra_colores}"
 echo -e "${azul} backup_alias${borra_colores}"
 echo -e "${azul} restore_alias${borra_colores}"
 echo ""
@@ -221,6 +222,34 @@ else
 fi
 echo ""
 }
+
+#menu_alias
+menu_alias(){
+clear
+echo ""
+# Lee el contenido del archivo y utiliza fzf para seleccionar un alias
+nombre_alias=$(cat /home/$(whoami)/.bash_aliases | grep -oP "(?<=alias\s)\w+" | fzf --height 80% --reverse --header="Selecciona un alias:" --no-info)
+
+# Utiliza una expresión regular para extraer el comando del alias seleccionado
+if [[ $(cat /home/$(whoami)/.bash_aliases) =~ alias\ $nombre_alias=\'([^\']+)\' ]]; then
+    # Captura el comando dentro de las comillas simples en una variable
+    comando=${BASH_REMATCH[1]}
+
+    # Imprime el nombre del alias y el comando
+    echo -e "${verde} Ejecutando alias:${borra_colores} $nombre_alias"
+    echo ""
+    sleep 1
+
+    # Ejecuta el comando
+    eval "$comando"
+        echo ""
+else
+    echo -e "${rojo} No se encontró un alias correspondiente al nombre seleccionado.${borra_colores}"
+    echo ""
+fi
+
+}
+
 
 #backup_alias
 backup_alias(){
