--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -33,7 +33,11 @@ echo ""
 #actualizar el script
 actualizar_alias(){
 clear
+echo ""
+echo -e "${verde} - ACTUALIZACION -${borra_colores}"
+echo ""
 #comprueba conexion
+
 if ping -c1 google.com &>/dev/null
 then
     conexion="SI"
@@ -226,6 +230,9 @@ echo ""
 #menu_alias
 menu_alias(){
 clear
+echo ""
+echo -e "${verde} - MENU ALIAS -${borra_colores}"
+echo ""
 echo ""
 # Lee el contenido del archivo y utiliza fzf para seleccionar un alias
 nombre_alias=$(cat /home/$(whoami)/.bash_aliases | grep -oP "(?<=alias\s)\w+" | fzf --height 80% --reverse --header="Selecciona un alias:" --no-info)
