--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -15,6 +15,7 @@ borra_colores="\033[0m\e[0m" #borra colores
 echo " Comando ( opciones_alias ), Para gestionar tus alias."
 
 opciones_alias(){
+clear
 echo ""
 echo -e " ${verde}-${borra_colores} Opciones de alias_bashrc ${verde}-${borra_colores}"
 echo ""
