--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -235,27 +235,32 @@ echo ""
 echo -e "${verde} - MENU ALIAS -${borra_colores}"
 echo ""
 echo ""
-# Lee el contenido del archivo y utiliza fzf para seleccionar un alias
-nombre_alias=$(cat /home/$(whoami)/.bash_aliases | grep -oP "(?<=alias\s)\w+" | fzf --height 80% --reverse --header="Selecciona un alias:" --no-info)
-
-# Utiliza una expresión regular para extraer el comando del alias seleccionado
-if [[ $(cat /home/$(whoami)/.bash_aliases) =~ alias\ $nombre_alias=\'([^\']+)\' ]]; then
-    # Captura el comando dentro de las comillas simples en una variable
-    comando=${BASH_REMATCH[1]}
-
-    # Imprime el nombre del alias y el comando
-    echo -e "${verde} Ejecutando alias:${borra_colores} $nombre_alias"
+if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
-    sleep 1
-
-    # Ejecuta el comando
-    eval "$comando"
-        echo ""
+    echo -e "${amarillo} No hay alias para realizar el backup.${borra_colores}"
+    echo ""
 else
-    echo -e "${rojo} No se encontró un alias correspondiente al nombre seleccionado.${borra_colores}"
-    echo ""
-fi
+    # Lee el contenido del archivo y utiliza fzf para seleccionar un alias
+    nombre_alias=$(cat /home/$(whoami)/.bash_aliases | grep -oP "(?<=alias\s)\w+" | fzf --height 80% --reverse --header="Selecciona un alias:" --no-info)
+    # Utiliza una expresión regular para extraer el comando del alias seleccionado
+    if [[ $(cat /home/$(whoami)/.bash_aliases) =~ alias\ $nombre_alias=\'([^\']+)\' ]]; then
+        # Captura el comando dentro de las comillas simples en una variable
+        comando=${BASH_REMATCH[1]}
 
+        # Imprime el nombre del alias y el comando
+        echo -e "${verde} Ejecutando alias:${borra_colores} $nombre_alias"
+        echo ""
+        sleep 1
+
+        # Ejecuta el comando
+        eval "$comando"
+        echo ""
+    else
+        echo ""
+        echo -e "${rojo} No se encontró un alias correspondiente al nombre seleccionado.${borra_colores}"
+        echo ""
+    fi
+fi
 }
 
 
