--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -233,11 +233,9 @@ menu_alias(){
 clear
 echo ""
 echo -e "${verde} - MENU ALIAS -${borra_colores}"
-echo ""
-echo ""
 if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
-    echo -e "${amarillo} No hay alias para realizar el backup.${borra_colores}"
+    echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
     echo ""
 else
     # Lee el contenido del archivo y utiliza fzf para seleccionar un alias
