--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -180,38 +180,88 @@ echo -e " Alias creado (${verde}$alias_name=$command${borra_colores})."
 echo ""
 }
 
-#borrar_alias
+##borrar_alias
+#borrar_alias(){
+#clear
+#echo ""
+#echo -e "${verde} - BORRAR ALIAS -${borra_colores}"
+## Verificar si el archivo .bash_aliases existe y no está vacío
+#if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
+#    echo ""
+#    echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
+#    echo ""
+#else
+#    # Mostrar los aliases disponibles en .bash_aliases
+#    echo ""
+#    echo -e " Alias disponibles de ${verde}$(whoami)${borra_colores}:"
+#    echo ""
+#    grep -oP "alias\s+\K\w+(?=\=)" /home/$(whoami)/.bash_aliases
+#    echo ""
+#
+#    # Pedir al usuario los aliases que desea eliminar, separados por espacio
+#    read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
+#    echo ""
+#    # Dividir los aliases ingresados por el usuario en un array
+#    aliases_array=($aliases_to_remove)
+#
+#    # Eliminar cada alias del archivo .bash_aliases
+#    for alias_name in "${aliases_array[@]}"; do
+#        sed -i "/alias $alias_name=/d" /home/$(whoami)/.bash_aliases
+#        echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
+#    done
+#fi
+#echo ""
+#}
+
 borrar_alias(){
-clear
-echo ""
-echo -e "${verde} - BORRAR ALIAS -${borra_colores}"
-# Verificar si el archivo .bash_aliases existe y no está vacío
-if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
+    clear
     echo ""
-    echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
-    echo ""
-else
-    # Mostrar los aliases disponibles en .bash_aliases
+    echo -e "${verde} - BORRAR ALIAS -${borra_colores}"
+
+    local alias_file="/home/$(whoami)/.bash_aliases"
+
+    # Verificar si el archivo .bash_aliases existe y no está vacío
+    if [ ! -f "$alias_file" ] || [ ! -s "$alias_file" ]; then
+        echo ""
+        echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
+        echo ""
+        return
+    fi
+
+    # Mostrar los aliases disponibles
     echo ""
     echo -e " Alias disponibles de ${verde}$(whoami)${borra_colores}:"
     echo ""
-    grep -oP "alias\s+\K\w+(?=\=)" /home/$(whoami)/.bash_aliases
+    grep -oP "alias\s+\K\w+(?=\=)" "$alias_file"
     echo ""
 
-    # Pedir al usuario los aliases que desea eliminar, separados por espacio
+    # Pedir al usuario los aliases a eliminar
     read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
     echo ""
-    # Dividir los aliases ingresados por el usuario en un array
+
+    # Convertir en array
     aliases_array=($aliases_to_remove)
 
-    # Eliminar cada alias del archivo .bash_aliases
     for alias_name in "${aliases_array[@]}"; do
-        sed -i "/alias $alias_name=/d" /home/$(whoami)/.bash_aliases
-        echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
+        # Verificar si el alias existe
+        if grep -q "^alias $alias_name=" "$alias_file"; then
+            sed -i "/^alias $alias_name=/d" "$alias_file"
+            echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
+        else
+            echo -e "${rojo}El alias '${alias_name}' no existe.${borra_colores}"
+        fi
     done
-fi
-echo ""
+
+    echo ""
 }
+
+
+
+
+
+
+
+
 
 #editar_fichero_alias
 editar_fichero_alias(){
