--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -337,6 +337,7 @@ echo ""
 restore_alias(){
 clear
 echo ""
+echo "estas en restore"; read p
 echo -e "${verde} - RESTORE ALIAS -${borra_colores}"
 if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
     echo ""
