--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -337,22 +337,35 @@ echo ""
 restore_alias(){
 clear
 echo ""
-echo "estas en restore"; read p
 echo -e "${verde} - RESTORE ALIAS -${borra_colores}"
-if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
-    echo ""
-    echo -e "${rojo} No hay existe fichero de backup.${borra_colores}"
-    echo -e "${amariollo} El fichero de backup tiene que estar en:${borra_colores}"
-    echo -e "${amarillo} /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup.${borra_colores}"
-    echo -e "${amarillo} Para poder restaurarlo.${borra_colores}"
-    echo ""
+echo ""
+echo -e "${amarillo} Si el fichero esta en:${borra_colores}"
+echo -e "${amarillo} /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup.${borra_colores}"
+echo -e "${amarillo} Puedes pulsar Enter directamente, sino introduce la ruta."
+read -p " Dime la ruta absoluta del fichero a restaurar: " ruta
+
+if [ $ruta="" ]; then
+    if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
+        echo ""
+        echo -e "${rojo} No hay existe fichero de backup.${borra_colores}"
+        echo -e "${amariollo} El fichero de backup tiene que estar en:${borra_colores}"
+        echo -e "${amarillo} /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup.${borra_colores}"
+        echo -e "${amarillo} Para poder restaurarlo.${borra_colores}"
+        echo ""
+    else
+        echo ""
+        echo -e " Se restaura el backup de alias:"
+        echo -e " /home/$(whoami)/backup_alias"
+        cp /home/$(whoami)/backup_alias/alias_$(whoami).backup /home/$(whoami)/.bash_aliases >/dev/null 2>&1
+        echo ""
+        echo -e "${verde} Reastauracion con exito.${borra_colores}"
+    fi
 else
-    echo ""
-    echo -e " Se restaura el backup de alias:"
-    echo -e " /home/$(whoami)/backup_alias"
-    cp /home/$(whoami)/backup_alias/alias_$(whoami).backup /home/$(whoami)/.bash_aliases >/dev/null 2>&1
-    echo ""
-    echo -e "${verde} Reastauracion con exito.${borra_colores}"
+    if [ -f "$ruta" ]; then
+        echo -e " El fichero '$ruta' existe y es correcto."; sleep 5
+    else
+        echo -e " El fichero '$ruta' no existe o no es un fichero válido."; sleep 5
+    fi
 fi
 echo ""
 }
