--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -341,7 +341,7 @@ echo -e "${verde} - RESTORE ALIAS -${borra_colores}"
 echo ""
 echo -e "${amarillo} Si el fichero esta en:${borra_colores}"
 echo -e "${amarillo} /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup.${borra_colores}"
-echo -e "${amarillo} Puedes pulsar Enter directamente, sino introduce la ruta."
+echo -e "${amarillo} Puedes pulsar Enter directamente, sino introduce la ruta.${borra_colores}"
 read -p " Dime la ruta absoluta del fichero a restaurar: " ruta
 
 if [ $ruta="" ]; then
