--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -344,7 +344,7 @@ echo -e "${amarillo} /home/$(whoami)/backup_alias con el nombre alias_$(whoami).
 echo -e "${amarillo} Puedes pulsar Enter directamente, sino introduce la ruta.${borra_colores}"
 read -p " Dime la ruta absoluta del fichero a restaurar: " ruta
 
-if [ $ruta="" ]; then
+if [ $ruta="ok" ]; then
     if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
         echo ""
         echo -e "${rojo} No hay existe fichero de backup.${borra_colores}"
